# notifier-api

./: .dockerignore  .gitignore  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  extensions.py
app/adapters/: email.py  slack.py
app/api/: __init__.py  health.py  notify.py  tasks.py
app/api/schemas/: schemas.py
app/domain/: models.py
app/ports/: notification.py  use_cases.py
app/use_cases/: handle_request.py
docker/: Dockerfile  docker-compose.yml  run.sh
docs/: TASK.md
nginx/: nginx.conf
tests/: test_adapters.py  test_app.py  test_use_cases.py
utils/: endpoint_tester.py
