[tool.poetry]
name = "notifier-api"
version = "0.1.0"
description = ""
authors = ["Jesús Izquierdo <susej_ic@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
black = "^25.1.0"
blueprint = "^3.4.2"
flask-cors = "^5.0.1"
apifairy = "^1.4.0"
requests = "^2.32.3"
flask-caching = "^2.3.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
